--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'root'
+include 'common'
+include 'config'
 include 'msa_exam'
 include 'msa_exam.gateway'
 include 'msa_exam.product'
