--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name = 'root'
 include 'common'
 include 'config'
 include 'msa_exam'
-include 'msa_exam.gateway'
-include 'msa_exam.product'
-include 'msa_exam.order'
-include 'msa_exam.auth'
+include 'gateway'
+include 'product'
+include 'order'
+include 'auth'
