chore: root 모듈의 build gradle에 order 추가

--- a/build.gradle
+++ b/build.gradle
@@ -48,3 +48,10 @@ project(':product') {
         implementation(testFixtures(project(":common")))
     }
 }
+
+project(':order') {
+    dependencies {
+        implementation project(':common')
+        implementation(testFixtures(project(":common")))
+    }
+}
