--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -5,6 +5,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
 	implementation 'io.jsonwebtoken:jjwt:0.12.6'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
