--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
 	implementation 'io.jsonwebtoken:jjwt:0.12.6'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
