--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -2,6 +2,25 @@ spring:
   application:
     name: product
 
+  config:
+    import:
+      - optional:file:product/.env[.properties]
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
 server:
   port: 19093
 
