--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -5,6 +5,25 @@ spring:
   application:
     name: auth
 
+  config:
+    import:
+      - optional:file:auth/.env[.properties]
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
 eureka:
   client:
     service-url:
