--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,10 @@ project(':order') {
         implementation(testFixtures(project(":common")))
     }
 }
+
+project(':auth') {
+    dependencies {
+        implementation project(':common')
+        implementation(testFixtures(project(":common")))
+    }
+}
