--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -69,3 +69,10 @@ management:
     metrics:
       export:
         enabled: true
+
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
