--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -50,3 +50,11 @@ eureka:
 logging:
   level:
     org.springframework.security: DEBUG
+
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0
