--- a/order/build.gradle
+++ b/order/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.cache:spring-cache-annotations'
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.0.5'
+
 	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
