--- a/product/build.gradle
+++ b/product/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 //    implementation 'org.springframework.kafka:spring-kafka'
 
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
