--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,54 +1,3 @@
-server:
-  port: 19091
-
 spring:
-  application:
-    name: gateway
-
-  config:
-    import:
-      - optional:file:gateway/.env[.properties]
-
-  main:
-    web-application-type: reactive
-
-  cloud:
-    gateway:
-      routes:
-        - id: order
-          uri: lb://order
-          predicates:
-            - Path=/api/orders/**
-
-        - id: product
-          uri: lb://product
-          predicates:
-            - Path=/api/products/**
-
-        - id: auth
-          uri: lb://auth
-          predicates:
-            - Path=/api/auth/**
-
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-
-service:
-  jwt:
-    secret-key: ${SECRET_KEY}
-    issuer: ${TOKEN_ISSUER}
-
-public:
-  paths: "/api/auth/sign-up, /api/auth/sign-in"
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
-
-logging:
-  level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.cloud.loadbalancer: DEBUG
+  profiles:
+    active: prod
