--- a/msa_exam/src/main/resources/application.yml
+++ b/msa_exam/src/main/resources/application.yml
@@ -1,20 +1,3 @@
 spring:
-  application:
-    name: msa_exam
-
-server:
-  port: 19090
-
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:19090/eureka/
-
-  instance:
-    hostname: localhost
-
-logging:
-  level:
-    org.springframework.security: DEBUG
+  profiles:
+    active: prod
